--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,6 +19,37 @@ function get1(){
 				console.log(result);
 			});
 }
+
+//每一个测试用例的超时时间
+jasmine.DEFAULT_TIMEOUT_INTERVAL = 1000;
+
+// 请求的接口的前缀 
+var base="http://localhost:8080/test";
+
+
+//测试模块
+describe("ajax跨越完全讲解", function() {
+	// 测试方法
+	it("get1请求", function(done) {
+		// 服务器返回的结果
+		var result;
+
+		$.getJSON(base + "/get1").then(function(jsonObj) {
+			result = jsonObj;
+		});
+
+		// 由于是异步请求，需要使用setTimeout(延迟)来校验
+		setTimeout(function() {
+			expect(result).toEqual({
+				"data" : "get1 ok"
+			});
+
+			// 校验完成，通知jasmine框架
+			done();
+		}, 100);
+	});
+});	
+	
 </script>
 </body>
 </html>
