带自定义头的跨域

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -126,6 +126,36 @@ describe("ajax跨越完全讲解", function() {
 			done();
 		}, 100);
 	});
+	
+	it("getHeader请求", function(done) {
+		// 服务器返回的结果
+		var result;
+
+		$.ajax({
+			type:"get",
+			url:base+"/getHeader",
+			headers:{
+				"x-header1":"AAA"
+			},
+			beforeSend:function(xhr){
+				xhr.setRequestHeader("x-header2","BBB")
+			},
+		    
+			success:function(json){
+				result=json;
+			}
+		});
+
+		// 由于是异步请求，需要使用setTimeout(延迟)来校验
+		setTimeout(function() {
+			expect(result).toEqual({
+				"data" : "getHeader AAA BBB"
+			});
+
+			// 校验完成，通知jasmine框架
+			done();
+		}, 100);
+	});
 });	
 	
 </script>
